[package]
name = "infilengine_codeless"
version = "0.2.2"
edition = "2024"

authors = ["Sprixitite"]
description = "InfiltrationEngine Codeless Client - Handles publishing of missions without ever copying a mission code"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.5.47", default-features = false, features = ["derive", "std", "help", "error-context", "suggestions", "usage"] }
console = { version = "0.16.1", default-features = false, features = ["std", "ansi-parsing"] }
dirs = "6.0.0"
git2 = "0.20.2"
auth-git2 = "0.5.8"
rouille = { version = "3.6.2", default-features = false }
